src/objects/Technology__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Technologies</relationshipLabel>
        <relationshipName>Technologies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Negotiation_Status__c</fullName>
        <label>Negotiation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sign_Date__c</fullName>
        <label>Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sox_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In SOX Scope?</label>
        <type>Checkbox</type>
    </fields>
    <label>Technology</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Sox_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>User_Audit_Technologies</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Concur,Salesforce.com,Paylocity,Informatica,Netsuite</value>
        </filters>
        <label>User Audit Technologies</label>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technologies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>